--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,25 @@
+{% extends "layout.html" %}
+
+{% set active_page = "index" %}
+
+{% block title %}Page 1: Name{% endblock %}
+
+{% block content %}
+
 <!DOCTYPE html>
 <html>
     <head>
         <title>Skyscraper Facts</title>
     </head>
     <body>
-		
+	<p>The data used in this web app is from the CORGIS Dataset Project and can be found 
+      <a href="https://corgis-edu.github.io/corgis/json/skyscrapers/">here</a>.  The data contain statistics about skyscrapers most notably when they were built 
+	  .You see skyscrapers almost every especially when you are in big citys, they are used for everything weather its for retail,finance etc.
+	  sky scrapers are known to be some of the biggest building to be built in modern time but what you dont relize is some of the skyscrapers you see are actually extremely old
+	  so this website will teach you just how old they really are.</p>
+	  
+	  <p> click a perfered year to see which skyscraper was built in that year</p>
+   	
         <form action="/showFact">
           <select name="yearDropdown"> <!-- A select element creates a drop-down box with options to select from. Note: add onchange="this.form.submit()" to submit/update the form when an option is selected.  Usefull for then displaying county options. -->
             {% for y in years %} <!-- Loop through the list of states and add an option element for each state -->
@@ -20,3 +35,4 @@
 
     </body>
 </html>
+{% endblock %}
