--- a/templates/decades.html
+++ b/templates/decades.html
@@ -6,6 +6,45 @@
 
 {% block content %}
 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Graph</title>
+   <script>
+window.onload = function () {
+
+var chart = new CanvasJS.Chart("chartContainer", {
+	animationEnabled: true,
+	exportEnabled: true,
+	theme: "light1", // "light1", "light2", "dark1", "dark2"
+	title:{
+		text: "skyscrapers built in each decade"
+	},
+  	axisY: {
+      includeZero: true
+	 
+    },
+	data: [{
+		type: "column", //change type to bar, line, area, pie, etc
+		//indexLabel: "{y}", //Shows y value on all Data Points
+		indexLabelFontColor: "#5A5757",
+      	indexLabelFontSize: 16,
+		indexLabelPlacement: "outside",
+		dataPoints: [
+			{{points}}
+		]
+	}]
+});
+chart.render();
+
+}
+</script>
+   </head>
+    <body>
+		<h1>Graph</h1>
+
+		<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+		<script src="https://cdn.canvasjs.com/canvasjs.min.js"></script>
 
 
 
@@ -13,11 +52,8 @@
 
 
 
-
-
-
-
-
+ </body>
+</html>
 
 
 
